--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div class="task__conteiner">
                 <div class="task__items">
                     <div class="task__item item-green">
-                        <img src="./img/plumbing.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-green" xlink:href="sprite.svg#plumbing"></use>
+                        </svg>
                         <h2 class="title">Plumbing</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Install / Replace a Toilet</li>
@@ -27,7 +29,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-blue">
-                        <img src="./img/drywall.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-blue" xlink:href="sprite.svg#drywall"></use>
+                        </svg>
                         <h2 class="title">Drywall & painting</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Install Drywall</li>
@@ -39,7 +43,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-yellow">
-                        <img src="./img/Furniture.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-yellow" xlink:href="sprite.svg#Furniture"></use>
+                        </svg>
                         <h2 class="title">Furniture assembly</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Assemble Fitness Equipment</li>
@@ -51,7 +57,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-red">
-                        <img src="./img/Electrical.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-red" xlink:href="sprite.svg#Electrical"></use>
+                        </svg>
                         <h2 class="title">Electrical</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Install / Replace a Ceiling Fan</li>
@@ -62,7 +70,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-green">
-                        <img src="./img/door.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-green" xlink:href="sprite.svg#door"></use>
+                        </svg>
                         <h2 class="title">Doors & windows</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Install / Replace New Door</li>
@@ -73,7 +83,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-blue">
-                        <img src="./img/hanging.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-blue" xlink:href="sprite.svg#hanging"></use>
+                        </svg>
                         <h2 class="title">Hanging & mounting</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Mount a TV</li>
@@ -84,7 +96,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-yellow">
-                        <img src="./img/appliance.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-yellow" xlink:href="sprite.svg#appliance"></use>
+                        </svg>
                         <h2 class="title">Appliance installation</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Replace an Existing Dishwasher</li>
@@ -94,7 +108,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-red">
-                        <img src="./img/smart.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-red" xlink:href="sprite.svg#smart"></use>
+                        </svg>
                         <h2 class="title">Smart home</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text">Install a Smart Lock</li>
@@ -105,7 +121,9 @@
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
                     <div class="task__item item-green">
-                        <img src="./img/outdoor.svg" alt="">
+                        <svg class="icons">
+                            <use class="icon-green" xlink:href="sprite.svg#outdoor"></use>
+                        </svg>
                         <h2 class="title">Outdoor</h2>
                         <ul class="task__informations">
                             <li class="task__informations-text"> Assemble an Outdoor Trampoline</li>
