--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <section class="task">
             <div class="task__conteiner">
                 <div class="task__items">
-                    <div class="task__item item-green">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-green" xlink:href="sprite.svg#plumbing"></use>
+                            <use xlink:href="sprite.svg#plumbing"></use>
                         </svg>
                         <h2 class="title">Plumbing</h2>
                         <ul class="task__informations">
@@ -28,9 +28,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-blue">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-blue" xlink:href="sprite.svg#drywall"></use>
+                            <use  xlink:href="sprite.svg#drywall"></use>
                         </svg>
                         <h2 class="title">Drywall & painting</h2>
                         <ul class="task__informations">
@@ -42,9 +42,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-yellow">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-yellow" xlink:href="sprite.svg#Furniture"></use>
+                            <use xlink:href="sprite.svg#Furniture"></use>
                         </svg>
                         <h2 class="title">Furniture assembly</h2>
                         <ul class="task__informations">
@@ -56,9 +56,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-red">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-red" xlink:href="sprite.svg#Electrical"></use>
+                            <use xlink:href="sprite.svg#Electrical"></use>
                         </svg>
                         <h2 class="title">Electrical</h2>
                         <ul class="task__informations">
@@ -69,9 +69,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-green">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-green" xlink:href="sprite.svg#door"></use>
+                            <use  xlink:href="sprite.svg#door"></use>
                         </svg>
                         <h2 class="title">Doors & windows</h2>
                         <ul class="task__informations">
@@ -82,9 +82,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-blue">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-blue" xlink:href="sprite.svg#hanging"></use>
+                            <use xlink:href="sprite.svg#hanging"></use>
                         </svg>
                         <h2 class="title">Hanging & mounting</h2>
                         <ul class="task__informations">
@@ -95,9 +95,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-yellow">
+                    <div class="task__item">
                         <svg class="icons">
-                            <use class="icon-yellow" xlink:href="sprite.svg#appliance"></use>
+                            <use xlink:href="sprite.svg#appliance"></use>
                         </svg>
                         <h2 class="title">Appliance installation</h2>
                         <ul class="task__informations">
@@ -107,9 +107,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-red">
+                    <div class="task__item ">
                         <svg class="icons">
-                            <use class="icon-red" xlink:href="sprite.svg#smart"></use>
+                            <use xlink:href="sprite.svg#smart"></use>
                         </svg>
                         <h2 class="title">Smart home</h2>
                         <ul class="task__informations">
@@ -120,9 +120,9 @@
                         </ul>
                         <a class="link" target="_blank" href="https://www.gmdev.site/">View more</a>
                     </div>
-                    <div class="task__item item-green">
+                    <div class="task__item">
                         <svg class="icons">
-                            <use class="icon-green" xlink:href="sprite.svg#outdoor"></use>
+                            <use xlink:href="sprite.svg#outdoor"></use>
                         </svg>
                         <h2 class="title">Outdoor</h2>
                         <ul class="task__informations">
